feat(updatingWorkplaceFlowForStaffRecruitment): Added care certificate column and tests to summary component

--- a/src/app/shared/components/workplace-summary/workplace-summary.component.html
+++ b/src/app/shared/components/workplace-summary/workplace-summary.component.html
@@ -585,7 +585,7 @@
     </dd>
   </div>
 
-  <!-- <div class="govuk-summary-list__row" data-testid="accept-care-certificate">
+  <div class="govuk-summary-list__row" data-testid="accept-care-certificate">
     <dt class="govuk-summary-list__key">Accept Care Certificate</dt>
     <dd class="govuk-summary-list__value">
       <app-summary-record-value
@@ -614,5 +614,5 @@
         (setReturnClicked)="this.setReturn()"
       ></app-summary-record-change>
     </dd>
-  </div> -->
+  </div>
 </dl>
