--- a/src/assets/scss/components/_inset-text.scss
+++ b/src/assets/scss/components/_inset-text.scss
@@ -2,6 +2,7 @@
   &.todo {
     border-color: govuk-colour('orange');
     background-color: rgba(govuk-colour('orange'), 0.12);
+    margin-top: 10px;
   }
 
   &.success {
