--- a/src/app/features/workplace/confirm-staff-recruitment/confirm-staff-recruitment.component.html
+++ b/src/app/features/workplace/confirm-staff-recruitment/confirm-staff-recruitment.component.html
@@ -4,7 +4,7 @@
 
     <div class="govuk-button-group govuk__justify-content-space-between govuk-!-margin-top-7">
       <p>Check the workplace details you've added before you confirm them.</p>
-      <button class="govuk-button" type="button">Confirm your answers</button>
+      <button class="govuk-button" type="button" (click)="onSuccess()">Confirm your answers</button>
     </div>
     <dl
       class="govuk-summary-list govuk-!-margin-bottom-0"
@@ -16,7 +16,7 @@
         <dt class="govuk-summary-list__key">Advertising spend</dt>
 
         <dd class="govuk-summary-list__value asc__preline">
-          {{ moneySpentOnAdvertisingInTheLastFourWeek ? null : '-' }}
+          {{ moneySpentOnAdvertisingInTheLastFourWeek }}
         </dd>
 
         <dd *ngIf="canNavigate === undefined ? true : canNavigate" class="govuk-summary-list__actions">
@@ -34,7 +34,7 @@
         <dt class="govuk-summary-list__key">People interviewed</dt>
 
         <dd class="govuk-summary-list__value asc__preline">
-          {{ peopleInterviewedInTheLastFourWeek ? null : '-' }}
+          {{ peopleInterviewedInTheLastFourWeek }}
         </dd>
 
         <dd *ngIf="canNavigate === undefined ? true : canNavigate" class="govuk-summary-list__actions">
@@ -48,7 +48,7 @@
         <dt class="govuk-summary-list__key">Repeat training</dt>
 
         <dd class="govuk-summary-list__value asc__preline">
-          {{ doNewStartersRepeatTraining ? null : '-' }}
+          {{ doNewStartersRepeatTraining }}
         </dd>
 
         <dd *ngIf="canNavigate === undefined ? true : canNavigate" class="govuk-summary-list__actions">
@@ -62,7 +62,7 @@
         <dt class="govuk-summary-list__key">Accept care certificate</dt>
 
         <dd class="govuk-summary-list__value asc__preline">
-          {{ wouldYouAcceptPreviousCertificates ? null : '-' }}
+          {{ wouldYouAcceptPreviousCertificates }}
         </dd>
 
         <dd *ngIf="canNavigate === undefined ? true : canNavigate" class="govuk-summary-list__actions">
