feat(updatingWorkplaceFlowForStaffRecruitment): Added £ sign to summary pages

--- a/src/app/shared/components/workplace-summary/workplace-summary.component.html
+++ b/src/app/shared/components/workplace-summary/workplace-summary.component.html
@@ -512,7 +512,7 @@
           -
         </ng-container>
         <ng-template #moneySpentOnAdvertisingInTheLastFourWeeksType>
-          {{ workplace.moneySpentOnAdvertisingInTheLastFourWeeks }}
+          £{{ workplace.moneySpentOnAdvertisingInTheLastFourWeeks }}
         </ng-template>
       </app-summary-record-value>
     </dd>
