feat(updatingWorkplaceFlowForStaffRecruitment): Fixed bug where check answers page sometimes wouldnt update on workplace value changes

--- a/src/app/shared/components/workplace-summary/workplace-summary.component.html
+++ b/src/app/shared/components/workplace-summary/workplace-summary.component.html
@@ -512,7 +512,21 @@
           -
         </ng-container>
         <ng-template #moneySpentOnAdvertisingInTheLastFourWeeksType>
-          £{{ workplace.moneySpentOnAdvertisingInTheLastFourWeeks }}
+          <ng-container
+            *ngIf="
+              workplace.moneySpentOnAdvertisingInTheLastFourWeeks == 'None' ||
+                workplace.moneySpentOnAdvertisingInTheLastFourWeeks == 'Don\'t know';
+              then moneySpentOnAdvertisingInTheLastFourWeeksNotKnown;
+              else moneySpentOnAdvertisingInTheLastFourWeeksKnown
+            "
+          >
+          </ng-container>
+          <ng-template #moneySpentOnAdvertisingInTheLastFourWeeksNotKnown>
+            {{ workplace.moneySpentOnAdvertisingInTheLastFourWeeks }}
+          </ng-template>
+          <ng-template #moneySpentOnAdvertisingInTheLastFourWeeksKnown>
+            £{{ workplace.moneySpentOnAdvertisingInTheLastFourWeeks }}
+          </ng-template>
         </ng-template>
       </app-summary-record-value>
     </dd>
