fix the training and qualification view by summary worker id link

--- a/src/app/shared/components/training-and-qualifications-categories/training-and-qualifications-categories.component.html
+++ b/src/app/shared/components/training-and-qualifications-categories/training-and-qualifications-categories.component.html
@@ -150,7 +150,7 @@
                               this.workplace.uid,
                               'training-and-qualifications-record',
                               training.worker.uid,
-                              trainingAndQualsRoute
+                              'training'
                             ]"
                           >
                             {{ training.worker.NameOrIdValue }}</a
