feat(staffRecruitmentNavigation): Updated staff recruitment buttons to not show View workplace link when in the staff recruitment miniflow

--- a/src/app/features/workplace/number-of-interviews/number-of-interviews.component.html
+++ b/src/app/features/workplace/number-of-interviews/number-of-interviews.component.html
@@ -80,6 +80,11 @@
       </div>
     </div>
   </fieldset>
-  <app-workplace-submit-button [return]="!!return" [isExistingStaffRecord]="false" (clicked)="setSubmitAction($event)">
+  <app-workplace-submit-button
+    [return]="!!return"
+    [recordSummary]="!this.inStaffRecruitmentFlow"
+    [isExistingStaffRecord]="false"
+    (clicked)="setSubmitAction($event)"
+  >
   </app-workplace-submit-button>
 </form>
