--- a/src/app/features/workplace/staff-recruitment-capture-training-requirement/staff-recruitment-capture-training-requirement.component.html
+++ b/src/app/features/workplace/staff-recruitment-capture-training-requirement/staff-recruitment-capture-training-requirement.component.html
@@ -35,6 +35,7 @@
   <app-workplace-submit-button
     [return]="!!return"
     [isExistingStaffRecord]="false"
+    [recordSummary]="!this.inStaffRecruitmentFlow"
     (clicked)="setSubmitAction($event)"
   ></app-workplace-submit-button>
 </form>
