create admin user service and get admin users resolver, with tests

--- a/src/app/features/admin/parent-requests/parent-requests-list.component.html
+++ b/src/app/features/admin/parent-requests/parent-requests-list.component.html
@@ -2,5 +2,7 @@
   <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-5">
     <h2 class="govuk-heading-m">Parent requests</h2>
   </div>
-  <app-approvals-table [pendingApprovals]="parentRequests" [routerLinkUrl]="'parent-requests'"></app-approvals-table>
+  <div class="govuk-grid-column-full">
+    <app-approvals-table [pendingApprovals]="parentRequests" [routerLinkUrl]="'parent-requests'"></app-approvals-table>
+  </div>
 </div>
