--- a/src/app/features/admin/admin-users/admin-users.component.html
+++ b/src/app/features/admin/admin-users/admin-users.component.html
@@ -1,1 +1,55 @@
-<div>Admin-users page</div>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <h2 class="govuk-heading-m">Admin users ({{ users.length }})</h2>
+  </div>
+  <div class="govuk-grid-column-one-third">
+    <button class="govuk-button govuk-util__float-right" type="button">Add an admin user</button>
+  </div>
+</div>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-full">
+        <table class="govuk-table">
+          <thead class="govuk-table__head">
+            <tr class="govuk-table__row">
+              <th class="govuk-table__header" scope="col">Full name</th>
+              <th class="govuk-table__header" scope="col">Username</th>
+              <th class="govuk-table__header" scope="col">Last updated</th>
+              <th class="govuk-table__header" scope="col">Permissions</th>
+              <th class="govuk-table__header" scope="col">Status</th>
+            </tr>
+          </thead>
+          <tbody class="govuk-table__body">
+            <ng-container *ngFor="let user of users">
+              <tr class="govuk-table__row" [class.govuk-error-table__row--highlight]="isPending(user)">
+                <td class="govuk-table__cell" [ngClass]="{ 'govuk-!-padding-left-3': isPending(user) }">
+                  <ng-container *ngIf="canViewUser; else noLink">
+                    <a [routerLink]="['/workplace', workplace.uid, 'user', user.uid]" data-testid="username-link">{{
+                      user.fullname
+                    }}</a>
+                  </ng-container>
+                  <ng-template #noLink>
+                    {{ user.fullname }}
+                  </ng-template>
+                </td>
+                <td class="govuk-table__cell">
+                  {{ isPending(user) ? '-' : user.username }}
+                </td>
+                <td class="govuk-table__cell">
+                  {{ user.updated | date: 'd MMM y' }}
+                </td>
+                <td class="govuk-table__cell">
+                  {{ getUserType(user) }}
+                </td>
+                <td class="govuk-table__cell">
+                  {{ user.status }}
+                </td>
+              </tr>
+            </ng-container>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
