--- a/src/app/features/admin/admin-users/admin-users.component.html
+++ b/src/app/features/admin/admin-users/admin-users.component.html
@@ -3,7 +3,9 @@
     <h2 class="govuk-heading-m">Admin users ({{ users.length }})</h2>
   </div>
   <div class="govuk-grid-column-one-third">
-    <button class="govuk-button govuk-util__float-right" type="button">Add an admin user</button>
+    <button class="govuk-button govuk-util__float-right" type="button" (click)="navigateToAddAdminUserPage()">
+      Add an admin user
+    </button>
   </div>
 </div>
 <div class="govuk-grid-row">
@@ -21,11 +23,15 @@
             </tr>
           </thead>
           <tbody class="govuk-table__body">
-            <ng-container *ngFor="let user of users">
-              <tr class="govuk-table__row" [class.govuk-error-table__row--highlight]="isPending(user)">
+            <ng-container *ngFor="let user of users; index as i">
+              <tr
+                class="govuk-table__row"
+                [attr.data-testid]="'row-' + i"
+                [class.govuk-error-table__row--highlight]="isPending(user)"
+              >
                 <td class="govuk-table__cell" [ngClass]="{ 'govuk-!-padding-left-3': isPending(user) }">
                   <ng-container *ngIf="canViewUser; else noLink">
-                    <a [routerLink]="['/workplace', workplace.uid, 'user', user.uid]" data-testid="username-link">{{
+                    <a [routerLink]="['/sfcadmin', 'users', user.uid]" data-testid="username-link">{{
                       user.fullname
                     }}</a>
                   </ng-container>
@@ -40,7 +46,7 @@
                   {{ user.updated | date: 'd MMM y' }}
                 </td>
                 <td class="govuk-table__cell">
-                  {{ getUserType(user) }}
+                  {{ user.role }}
                 </td>
                 <td class="govuk-table__cell">
                   {{ user.status }}
