added tests for user notification

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -45,6 +45,7 @@
                 class="govuk-!-margin-right-1 govuk-!-margin-bottom-1"
                 style="height: 16px; width: 16px"
                 *ngIf="users && users.length == 1"
+                data-testid="singleUserNotification"
             /></a>
           </li>
           <li class="govuk-header__navigation-item">
