--- a/src/app/features/admin/admin-users/add-edit-admin-users/add-edit-admin-users.component.html
+++ b/src/app/features/admin/admin-users/add-edit-admin-users/add-edit-admin-users.component.html
@@ -2,7 +2,15 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form" id="server-error">
-      <fieldset class="govuk-fieldset">
+      <app-user-form
+        [form]="form"
+        [formErrorsMap]="formErrorsMap"
+        [formControlsMap]="formControlsMap"
+        [submitted]="submitted"
+        [permissionsTypeRadios]="permissionsTypeRadios"
+        [(getFirstErrorMessage)]="getFirstErrorMessage"
+      ></app-user-form>
+      <!-- <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--m govuk-!-margin-bottom-8">
           <h1 class="govuk-fieldset__heading">Add admin user details</h1>
         </legend>
@@ -59,7 +67,7 @@
             </div>
           </div>
         </div>
-      </fieldset>
+      </fieldset> -->
 
       <app-submit-exit-buttons [cta]="callToActionLabel" [exit]="'Cancel'" [return]="return"></app-submit-exit-buttons>
     </form>
