--- a/src/app/features/forgot-your-password/forgot-your-password.component.html
+++ b/src/app/features/forgot-your-password/forgot-your-password.component.html
@@ -1,2 +1,6 @@
 <app-fp-edit (formDataOutput)="getChildFormData($event)" *ngIf="!submitted" [serverError]="serverError"> </app-fp-edit>
-<app-fp-confirmation [resetPasswordLink]="resetPasswordLink" *ngIf="submitted"></app-fp-confirmation>
+<app-fp-confirmation
+  [resetPasswordLink]="resetPasswordLink"
+  [emailAddress]="usernameOrEmail"
+  *ngIf="submitted"
+></app-fp-confirmation>
