--- a/src/app/features/forgot-your-password/confirmation/confirmation.component.html
+++ b/src/app/features/forgot-your-password/confirmation/confirmation.component.html
@@ -1,8 +1,10 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <h1 class="govuk-heading-xl">Reset link sent</h1>
-    <p>An email has been sent to the address provided containing a reset password link.</p>
+    <p>If there's an ASC-WDS account for {{ emailAddress }}, you'll receive an email with a reset password link.</p>
 
-    <a [routerLink]="['/login']" role="button" draggable="false" class="govuk-button"> Return to sign in </a>
+    <a [routerLink]="['/login']" role="button" draggable="false" class="govuk-button govuk-!-margin-top-4">
+      Return to sign in
+    </a>
   </div>
 </div>
