--- a/src/app/features/admin/admin.component.html
+++ b/src/app/features/admin/admin.component.html
@@ -7,7 +7,7 @@
   <div class="govuk-grid-column-one-quarter-from-desktop">
     <app-admin-menu></app-admin-menu>
   </div>
-  <div class="govuk-grid-column-three-quarters-from-desktop">
+  <div class="govuk-grid-column-three-quarters-from-desktop govuk-!-padding-top-2">
     <router-outlet></router-outlet>
   </div>
 </div>
