--- a/src/app/features/workplace/accept-previous-care-certificate/accept-previous-care-certificate.component.html
+++ b/src/app/features/workplace/accept-previous-care-certificate/accept-previous-care-certificate.component.html
@@ -1,33 +1,34 @@
 <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <div class="govuk-form-group">
-        <fieldset class="govuk-fieldset">
+  <fieldset class="govuk-fieldset">
+    <div class="govuk-form-group govuk-!-margin-bottom-0">
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
               Would you accept a Care Certificate from a worker's previous employer?
             </h1>
           </legend>
-          <div class="govuk-radios govuk-form-group">
-            <div class="govuk-radios__item" *ngFor="let option of previousCareCertificateOptions; let i = index">
-              <input
-                class="govuk-radios__input"
-                id="acceptCareCertificatesFromPreviousEmployment-{{ i }}"
-                name="acceptCareCertificatesFromPreviousEmployment"
-                [formControlName]="'acceptCareCertificatesFromPreviousEmployment'"
-                type="radio"
-                [value]="option.value"
-              />
-              <label class="govuk-label govuk-radios__label" for="acceptCareCertificatesFromPreviousEmployment-{{ i }}">
-                {{ option.label }}
-              </label>
-            </div>
+        </div>
+      </div>
+      <div class="gouvk-grid-row govuk-!-margin-bottom-3">
+        <div class="govuk-radios">
+          <div class="govuk-radios__item" *ngFor="let option of previousCareCertificateOptions; let i = index">
+            <input
+              class="govuk-radios__input"
+              id="acceptCareCertificatesFromPreviousEmployment-{{ i }}"
+              name="acceptCareCertificatesFromPreviousEmployment"
+              [formControlName]="'acceptCareCertificatesFromPreviousEmployment'"
+              type="radio"
+              [value]="option.value"
+            />
+            <label class="govuk-label govuk-radios__label" for="acceptCareCertificatesFromPreviousEmployment-{{ i }}">
+              {{ option.label }}
+            </label>
           </div>
-        </fieldset>
+        </div>
       </div>
     </div>
-  </div>
-
+  </fieldset>
   <app-workplace-submit-button
     [return]="!!return"
     [isExistingStaffRecord]="false"
