--- a/src/app/features/workplace/staff-recruitment-capture-training-requirement/staff-recruitment-capture-training-requirement.component.html
+++ b/src/app/features/workplace/staff-recruitment-capture-training-requirement/staff-recruitment-capture-training-requirement.component.html
@@ -1,37 +1,38 @@
 <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <div class="govuk-form-group">
-        <fieldset class="govuk-fieldset">
+  <fieldset class="govuk-fieldset">
+    <div class="govuk-form-group govuk-!-margin-bottom-0">
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
               Do new starters have to repeat training they've done with previous employers?
             </h1>
           </legend>
-          <div class="govuk-!-margin-bottom-7">
+          <div class="govuk-!-margin-bottom-6">
             <p>Training could be things like first aid or fire safety training.</p>
           </div>
+        </div>
+      </div>
 
-          <div class="govuk-radios govuk-form-group">
-            <div class="govuk-radios__item" *ngFor="let option of trainingRequiredOptions; let i = index">
-              <input
-                class="govuk-radios__input"
-                id="trainingRequired-{{ i }}"
-                name="trainingRequired"
-                [formControlName]="'trainingRequired'"
-                type="radio"
-                [value]="option.value"
-              />
-              <label class="govuk-label govuk-radios__label" for="trainingRequired-{{ i }}">
-                {{ option.label }}
-              </label>
-            </div>
+      <div class="gouvk-grid-row govuk-!-margin-bottom-3">
+        <div class="govuk-radios">
+          <div class="govuk-radios__item" *ngFor="let option of trainingRequiredOptions; let i = index">
+            <input
+              class="govuk-radios__input"
+              id="trainingRequired-{{ i }}"
+              name="trainingRequired"
+              [formControlName]="'trainingRequired'"
+              type="radio"
+              [value]="option.value"
+            />
+            <label class="govuk-label govuk-radios__label" for="trainingRequired-{{ i }}">
+              {{ option.label }}
+            </label>
           </div>
-        </fieldset>
+        </div>
       </div>
     </div>
-  </div>
-
+  </fieldset>
   <app-workplace-submit-button
     [return]="!!return"
     [isExistingStaffRecord]="false"
