get logged in user role from object available in routing, fix tests

--- a/src/app/features/admin/admin-users/admin-account-view/admin-account-view.component.html
+++ b/src/app/features/admin/admin-users/admin-account-view/admin-account-view.component.html
@@ -10,7 +10,7 @@
       <a
         class="govuk-list govuk-button-link govuk-list--inline govuk__flex govuk__align-items-center govuk-util__float-right govuk-!-margin-left-9"
         draggable="false"
-        *ngIf="isAdminManger"
+        *ngIf="isAdminManager"
         role="button"
         href="#"
       >
