--- a/src/app/features/admin/admin-users/admin-users.component.html
+++ b/src/app/features/admin/admin-users/admin-users.component.html
@@ -3,9 +3,11 @@
     <h2 class="govuk-heading-m">Admin users ({{ users.length }})</h2>
   </div>
   <div class="govuk-grid-column-one-third">
-    <button class="govuk-button govuk-util__float-right" type="button" (click)="navigateToAddAdminUserPage()">
-      Add an admin user
-    </button>
+    <ng-container *ngIf="adminManager">
+      <button class="govuk-button govuk-util__float-right" type="button" (click)="navigateToAddAdminUserPage()">
+        Add an admin user
+      </button>
+    </ng-container>
   </div>
 </div>
 <app-user-table [users]="users"></app-user-table>
