Add the functionality to resend email for pending users while having admin manager role

--- a/src/app/features/admin/admin-users/admin-account-view/admin-account-view.component.html
+++ b/src/app/features/admin/admin-users/admin-account-view/admin-account-view.component.html
@@ -3,8 +3,15 @@
     <h2 class="govuk-heading-m">Admin user details</h2>
   </div>
   <div class="govuk-grid-column-two-thirds">
-    <div class="govuk-!-margin-top-0 govuk-button-heading-group">
-      <a *ngIf="isPending" class="govuk-list govuk-util__float-right" draggable="false" role="button" href="#">
+    <div class="govuk-button-heading-group">
+      <a
+        *ngIf="isPending && isAdminManager"
+        class="govuk-list govuk-list--inline"
+        draggable="false"
+        role="button"
+        (click)="resendActivationLink($event)"
+        href="#"
+      >
         Resend the user set-up email</a
       >
       <a
