write html code for progress bar

--- a/src/app/features/workplace/type-of-employer/type-of-employer.component.html
+++ b/src/app/features/workplace/type-of-employer/type-of-employer.component.html
@@ -58,6 +58,11 @@
         </fieldset>
       </div>
     </div>
+    <div class="govuk-grid-column-one-third">
+      <app-progress-bar
+        [sections]="['Services', 'Vacancies and turnover', 'Recruitment', 'Rewards and benefits', 'Permissions']"
+      ></app-progress-bar>
+    </div>
   </div>
 
   <app-workplace-submit-button
