--- a/src/app/shared/components/progress-bar/progress-bar.component.html
+++ b/src/app/shared/components/progress-bar/progress-bar.component.html
@@ -1,1 +1,42 @@
-<div>Progress bar</div>
+<h3 class="govuk-!-margin-bottom-0">Make a claim</h3>
+<hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible" />
+<ng-container *ngFor="let step of sections; index as i">
+  <p class="govuk-!-display-block govuk-!-margin-bottom-0">
+    <img
+      *ngIf="i < stepIndex"
+      [attr.data-testid]="'completed-' + i"
+      class="govuk-!-margin-right-1 govuk-util__vertical-align-top"
+      src="/assets/images/progress-bar/done.svg"
+      alt=""
+    />
+    <img
+      *ngIf="i == stepIndex"
+      [attr.data-testid]="'currentStep-' + i"
+      class="govuk-!-margin-right-1 govuk-util__vertical-align-top"
+      src="/assets/images/progress-bar/doing.svg"
+      alt=""
+    />
+    <img
+      *ngIf="i > stepIndex"
+      [attr.data-testid]="'notCompleted-' + i"
+      class="govuk-!-margin-right-1 govuk-util__vertical-align-top"
+      src="/assets/images/progress-bar/to-do.svg"
+      alt=""
+    />
+    {{ step }}
+  </p>
+  <img
+    *ngIf="i < stepIndex"
+    [attr.data-testid]="'blackLine-' + i"
+    class="govuk-!-display-block govuk-!-margin-top-0 govuk-!-margin-bottom-0 govuk-!-margin-left-2"
+    src="/assets/images/progress-bar/black-line.svg"
+    alt=""
+  />
+  <img
+    *ngIf="i >= stepIndex && i != sections.length - 1"
+    [attr.data-testid]="'greyLine-' + i"
+    class="govuk-!-display-block govuk-!-margin-top-0 govuk-!-margin-bottom-0 govuk-!-margin-left-2"
+    src="/assets/images/progress-bar/grey-line.svg"
+    alt=""
+  />
+</ng-container>
