complete functionality of the progress bar and write tests

--- a/src/app/features/workplace/type-of-employer/type-of-employer.component.html
+++ b/src/app/features/workplace/type-of-employer/type-of-employer.component.html
@@ -60,7 +60,8 @@
     </div>
     <div class="govuk-grid-column-one-third">
       <app-progress-bar
-        [sections]="['Services', 'Vacancies and turnover', 'Recruitment', 'Rewards and benefits', 'Permissions']"
+        [sections]="['Services', 'Vacancies and turnover', 'Recruitment', 'Staff benefits', 'Permissions']"
+        [currentSection]="'Vacancies and turnover'"
       ></app-progress-bar>
     </div>
   </div>
