--- a/src/app/shared/components/progress-bar/progress-bar.component.scss
+++ b/src/app/shared/components/progress-bar/progress-bar.component.scss
@@ -1,5 +1,11 @@
 @import '~govuk-frontend/govuk/base';
 
+.asc-progress-bar {
+  @media only screen and (max-width: 768px) {
+    display: none;
+  }
+}
+
 .asc-colour-grey {
-  color: $govuk-secondary-text-colour;
+  color: govuk-colour('mid-grey');
 }
