--- a/src/app/features/workplace/check-answers/check-answers.component.html
+++ b/src/app/features/workplace/check-answers/check-answers.component.html
@@ -7,13 +7,14 @@
       </h1>
 
       <div class="govuk-button-group govuk__justify-content-space-between govuk-!-margin-top-7">
-        <p>Check the workplace details you've added before you confirm them.</p>
+        <p>Check the workplace details before you confirm them.</p>
         <button class="govuk-button" type="button" (click)="showConfirmWorkplaceDetailsAlert()">
           Confirm workplace details
         </button>
       </div>
 
-      <app-workplace-summary [workplace]="establishment" [return]="summaryReturnUrl"></app-workplace-summary>
+      <!-- <app-workplace-summary [workplace]="establishment" [return]="summaryReturnUrl"></app-workplace-summary> -->
+      <app-new-workplace-summary [workplace]="establishment" [return]="summaryReturnUrl"></app-new-workplace-summary>
     </div>
   </div>
 </ng-container>
