--- a/src/app/features/admin/admin-users/admin-account-view/admin-account-view.component.html
+++ b/src/app/features/admin/admin-users/admin-account-view/admin-account-view.component.html
@@ -15,7 +15,7 @@
         href="#"
       >
         <img src="/assets/images/bin.svg" alt="" />
-        <span class="govuk-!-margin-left-1" (click)="deleteUserModal()">Delete this admin user</span></a
+        <span class="govuk-!-margin-left-1" (click)="deleteUserModal($event)">Delete this admin user</span></a
       >
     </div>
   </div>
