add more tests for the new component

--- a/src/app/shared/components/new-workplace-summary/new-workplace-summary.component.html
+++ b/src/app/shared/components/new-workplace-summary/new-workplace-summary.component.html
@@ -77,7 +77,7 @@
       <dd class="govuk-summary-list__value"></dd>
       <dd class="govuk-summary-list__actions"></dd>
     </div>
-    <div class="govuk-summary-list__row">
+    <div class="govuk-summary-list__row" data-testid="otherServices">
       <dt class="govuk-summary-list__key">Other services</dt>
       <dd class="govuk-summary-list__value">
         <ng-container [ngSwitch]="workplace.otherServices.value">
@@ -104,7 +104,7 @@
       </dd>
     </div>
 
-    <div class="govuk-summary-list__row">
+    <div class="govuk-summary-list__row" data-testid="serviceCapacity">
       <dt class="govuk-summary-list__key">Service capacity</dt>
       <dd class="govuk-summary-list__value">
         <app-summary-record-value
@@ -149,7 +149,7 @@
       </dd>
     </div>
 
-    <div class="govuk-summary-list__row">
+    <div class="govuk-summary-list__row" data-testid="serviceUsers">
       <dt class="govuk-summary-list__key">Service users</dt>
       <dd class="govuk-summary-list__value">
         <app-summary-record-value
@@ -205,7 +205,7 @@
       <dd class="govuk-summary-list__value"></dd>
       <dd class="govuk-summary-list__actions"></dd>
     </div>
-    <div class="govuk-summary-list__row">
+    <div class="govuk-summary-list__row" data-testid="vacancies">
       <dt class="govuk-summary-list__key">Current staff vacancies</dt>
       <dd class="govuk-summary-list__value">
         <app-summary-record-value
@@ -253,7 +253,7 @@
       </dd>
     </div>
 
-    <div class="govuk-summary-list__row">
+    <div class="govuk-summary-list__row" data-testid="starters">
       <dt class="govuk-summary-list__key">New starters</dt>
       <dd class="govuk-summary-list__value">
         <app-summary-record-value
@@ -303,7 +303,7 @@
       </dd>
     </div>
 
-    <div class="govuk-summary-list__row">
+    <div class="govuk-summary-list__row" data-testid="leavers">
       <dt class="govuk-summary-list__key">Staff leavers</dt>
       <dd class="govuk-summary-list__value">
         <app-summary-record-value
