--- a/src/app/shared/directives/create-workplace/select-workplace/select-workplace.component.html
+++ b/src/app/shared/directives/create-workplace/select-workplace/select-workplace.component.html
@@ -36,28 +36,37 @@
           </div>
         </div>
       </fieldset>
-      <ng-container *ngIf="isCQCLocationUpdate; else CQCLocationAdd">
-        <p>
-          Workplace not displayed?
-          <a [routerLink]="['/workplace', workplace.uid, 'regulated-by-cqc']">go back and try again</a>.
-        </p>
-
-        <button class="govuk-button" type="submit">Save and Return</button>
-        <button
-          type="button"
-          class="govuk-button govuk-button--link govuk-util__float-right"
-          (click)="returnToWorkPlace($event)"
-        >
-          Exit
-        </button>
+      <ng-container *ngIf="isWorkplaceFlow; else exitButtons">
+        <app-workplace-submit-button
+          [return]="!!return"
+          (clicked)="setSubmitAction($event)"
+          [isExistingStaffRecord]="false"
+        ></app-workplace-submit-button>
       </ng-container>
-      <ng-template #CQCLocationAdd>
-        <p class="govuk-!-margin-bottom-7">
-          <a [routerLink]="[flow, 'workplace-name-address']" role="button" draggable="false">
-            Workplace is not displayed or is not correct
-          </a>
-        </p>
-        <button class="govuk-button" type="submit">Continue</button>
+      <ng-template #exitButtons>
+        <ng-container *ngIf="isCQCLocationUpdate; else CQCLocationAdd">
+          <p>
+            Workplace not displayed?
+            <a [routerLink]="['/workplace', workplace.uid, 'regulated-by-cqc']">go back and try again</a>.
+          </p>
+
+          <button class="govuk-button" type="submit">Save and Return</button>
+          <button
+            type="button"
+            class="govuk-button govuk-button--link govuk-util__float-right"
+            (click)="returnToWorkPlace($event)"
+          >
+            Exit
+          </button>
+        </ng-container>
+        <ng-template #CQCLocationAdd>
+          <p class="govuk-!-margin-bottom-7">
+            <a [routerLink]="[flow, 'workplace-name-address']" role="button" draggable="false">
+              Workplace is not displayed or is not correct
+            </a>
+          </p>
+          <button class="govuk-button" type="submit">Continue</button>
+        </ng-template>
       </ng-template>
     </form>
   </div>
