--- a/src/app/shared/components/progress-bar/progress-bar.component.html
+++ b/src/app/shared/components/progress-bar/progress-bar.component.html
@@ -1,4 +1,4 @@
-<div class="asc-progress-bar govuk-!-margin-right-2">
+<div class="asc-progress-bar govuk-!-margin-right-2 govuk-!-margin-top-2">
   <ng-container *ngFor="let section of sections; index as i">
     <div class="govuk__flex">
       <div class="govuk-!-margin-right-3">
