changed button styling

--- a/src/app/features/admin/admin-users/delete-admin-user/delete-admin-user.component.html
+++ b/src/app/features/admin/admin-users/delete-admin-user/delete-admin-user.component.html
@@ -2,5 +2,5 @@
 
 <p>If you do this, will not be able to sign in as an admin user anymore.</p>
 
-<button (click)="close(true)" class="govuk-button govuk-button--warning">Delete admin user</button>
+<button (click)="close(true)" class="govuk-button">Delete admin user</button>
 <button (click)="close(false)" class="govuk-button govuk-button--link govuk-util__float-right">Cancel</button>
