--- a/src/app/features/workplace/leavers/leavers.component.html
+++ b/src/app/features/workplace/leavers/leavers.component.html
@@ -146,9 +146,5 @@
     </div>
   </fieldset>
 
-  <app-workplace-submit-button
-    [return]="!!return"
-    [isExistingStaffRecord]="false"
-    (clicked)="setSubmitAction($event)"
-  ></app-workplace-submit-button>
+  <app-workplace-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-workplace-submit-button>
 </form>
