--- a/src/app/features/workplace/service-users/service-users.component.html
+++ b/src/app/features/workplace/service-users/service-users.component.html
@@ -80,9 +80,5 @@
     </div>
   </div>
 
-  <app-workplace-submit-button
-    [return]="!!return"
-    [isExistingStaffRecord]="false"
-    (clicked)="setSubmitAction($event)"
-  ></app-workplace-submit-button>
+  <app-workplace-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-workplace-submit-button>
 </form>
