--- a/src/app/features/workplace/total-staff-question/total-staff-question.component.html
+++ b/src/app/features/workplace/total-staff-question/total-staff-question.component.html
@@ -10,9 +10,5 @@
   >
   </app-total-staff>
 
-  <app-workplace-submit-button
-    [return]="!!return"
-    [isExistingStaffRecord]="false"
-    (clicked)="setSubmitAction($event)"
-  ></app-workplace-submit-button>
+  <app-workplace-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-workplace-submit-button>
 </form>
