--- a/src/app/features/workplace/vacancies/vacancies.component.html
+++ b/src/app/features/workplace/vacancies/vacancies.component.html
@@ -150,9 +150,5 @@
     </div>
   </fieldset>
 
-  <app-workplace-submit-button
-    [return]="!!return"
-    [isExistingStaffRecord]="false"
-    (clicked)="setSubmitAction($event)"
-  ></app-workplace-submit-button>
+  <app-workplace-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-workplace-submit-button>
 </form>
